# ChangeLog for net-nds/389-admin
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  389-admin-1.1.10-r1.ebuild, 389-admin-1.1.11_alpha2.ebuild:
  fixed use flag ipv6, downgrade nspr library

  14 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.1.11_alpha2/0001-gentoo-apache-names.patch,
  +files/1.1.11_alpha2/0003-find-mod_nss.m4.patch,
  +files/1.1.11_alpha2/0004-rpath-fix.configure.ac.patch,
  +files/1.1.11_alpha2/0010-gentoo_selinux_makefile.patch,
  +files/1.1.11_alpha2/48_mod_admserv.conf, +389-admin-1.1.11_alpha2.ebuild,
  +files/1.1.11_alpha2/48_mod_restartd.conf:
  alpha version

*389-admin-1.1.11_alpha2 ( 14 Mar 2010 )

  12 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-admin-1.1.10.ebuild, +389-admin-1.1.10-r1.ebuild:
  bump

  12 Mar 2010; <slep@gentoo.org>
  +files/1.1.10/0010-gentoo_selinux_makefile.patch, 389-admin-1.1.10.ebuild:
  selinux patch and test

  16 Feb 2010; <slep@gentoo.org> -files/1.1.9-apache2-httpd.conf.patch,
  -389-admin-1.1.9.ebuild, -files/1.1.9/0001-gentoo-apache-names.patch,
  -389-admin-1.1.9-r1.ebuild, -files/1.1.9/0002-gentoo-brand-name.patch,
  -files/fedora-ds-admin-1.1.5-cfgstuff-1.patch:
  delete 1.1.9 version

  25 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/1.1.10/0002-gentoo-brand-name.patch,
  +files/1.1.10/0003-find-mod_nss.m4.patch,
  +files/1.1.10/0004-rpath-fix.configure.ac.patch, 389-admin-1.1.10.ebuild,
  +files/1.1.10/48_mod_admserv.conf, +files/1.1.10/48_mod_restartd.conf:
  fix more failure

  25 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -files/1.1.10/0002-gentoo-brand-name.patch,
  +files/1.1.10/0003-find-mod_nss.m4.patch,
  +files/1.1.10/0004-rpath-fix.configure.ac.patch, 389-admin-1.1.10.ebuild,
  +files/1.1.10/48_mod_admserv.conf, +files/1.1.10/48_mod_restartd.conf:
  fix more failure

  22 Jan 2010; <slep@gentoo.org> -389-admin-1.1.10_alpha2.ebuild:
  delete alpha version
