@@ -15,9 +15,7 @@ AUX dirsrv-admin.initd 3878 RMD160 f07dcf7d62e9c569fb665dcc35ccdf9366ff5491 SHA1
 AUX restart-ds-admin 157 RMD160 9957bb2ef43d971b940b9fee05ca5a0ea8fbc996 SHA1 068f8c8932a09581b27f11ce730b53c23932207e SHA256 0b222fdd304dddc8c1c304bc08e46a1c0857e7d8607ffd9bf3623603723e60e3
 AUX start-ds-admin 155 RMD160 fb62ec3a68ba7f41484d3f1b243b6568fa0e3bad SHA1 47626cfdb06b8d924a1a7123fdf9c553750bdea8 SHA256 09656430f4010f18e9ac752127b85bbfb722cbe471b9128cca6199df0944cb24
 AUX stop-ds-admin 154 RMD160 7d48cf82c397be8f58d610785449897af6e0519a SHA1 63feebb8f5460f9693b1d03cd59caf83d02a2107 SHA256 65941a5d8a32549e30a81a1e5a2d87a0bef3e1f34893e4332703b97562bed72c
-DIST 389-admin-1.1.10.tar.bz2 655219 RMD160 420c4fe7b3cdba0912c0471208f21a8a68b15317 SHA1 a1e4f053c6915a500d411306614a6b58c941f93c SHA256 c4f487face0707e938b5997628beede5748f985d141b2f1b694e68ab88fbcfe7
 DIST 389-admin-1.1.11.a2.tar.bz2 656049 RMD160 3ce3f1da44f0d2432479e9afd12fb090f365c42b SHA1 42002e97412e3e7399b2b8abfc38f9c2e7ad9185 SHA256 c9ee81074413f03e689124e9493f3e5159f188547eaa513828e248bb47c72702
-EBUILD 389-admin-1.1.10-r1.ebuild 3982 RMD160 0ab1f15c38caf431234dd43d8635492cdded85ce SHA1 51c787413f466b4440bae5f4ea80b5689526e6dc SHA256 8e856bac0320c092c20f6d2f3524a75482039c5b900989dfa7f6a65efae74dc9
-EBUILD 389-admin-1.1.11_alpha2.ebuild 3963 RMD160 e76713ac9017e800bd575a6ce3623c3f5c31c4b3 SHA1 ac951de934c60ffd9753f5c84733c87e952fa087 SHA256 721a3f8f7ff1b8c4de939467fc1564221f302e994e4a294415aa98de93266033
-MISC ChangeLog 6840 RMD160 d6a727a856c6ca7a19508ebcc1f06cb7b4d28770 SHA1 b5f54f7d009c1c93c2063502085ac72adcd537ac SHA256 9ce3356c5fcb990e153db7407000d8da152f3bbad2d4f66dbc1d471a470700db
+EBUILD 389-admin-1.1.11_alpha2.ebuild 3614 RMD160 ead4bb8ea0d1b0202171de1d022037c32280e301 SHA1 029c7814ed86bb5a08b5c00276ed377737598203 SHA256 4241424b36aad2fb974c46850f7aabae17ac78f33a789dc1910ead31cff35f6d
+MISC ChangeLog 7055 RMD160 4a56424c36482c1d486ff5a870a4f9256398e519 SHA1 35d10a330c4efb3c4f0058304dc09b0557d8486f SHA256 d95c9ea880693bd064525dd033b7d9328bf3b0c6e9d58a1d0245dbb1a2f70e08
 MISC metadata.xml 476 RMD160 51ca8a6b8c749e2c263e00ddd93e20dfb899d7a7 SHA1 b1bed78f43bcf6eff73133b0ba0101f68cfa7997 SHA256 3bae7b14a10aaff31d6ec0ac7bd09091aec3a5d03eb41187fb6e9250096a2c9d
