@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  389-admin-1.1.11_alpha2.ebuild:
+  fix threads depends
+
+  28 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  -389-admin-1.1.10-r1.ebuild:
+  remove 10 version
+
   17 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   389-admin-1.1.10-r1.ebuild, 389-admin-1.1.11_alpha2.ebuild:
   fixed use flag ipv6, downgrade nspr library
